Demonstration for enabling discovery of other devices using the superdrive microservice

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="authorize">Authorize</string>
     <string name="get_random_number">Get Random Number</string>
     <string name="clear">Clear edge</string>
+    <string name="get_random_number_with_superdrive">Get Random Number With Superdrive</string>
 </resources>
